--- a/_posts/2023-05-08-1-Python-os模块常用功能介绍.md
+++ b/_posts/2023-05-08-1-Python-os模块常用功能介绍.md
@@ -5,7 +5,7 @@ category: python
 tags: python
 ---
 
-## **1. 简介**
+## **简介**
 
 `os`就是“operating system”的缩写，顾名思义，`os`模块提供的就是各种 Python 程序与操作系统进行交互的接口。通过使用`os`模块，一方面可以方便地与操作系统进行交互，另一方面可以极大的增强代码的可移植性。如果该模块中相关功能出错，会抛出`OSError`异常或其子类异常。
 
@@ -15,12 +15,12 @@ tags: python
 
 此外，导入`os`模块时还要小心一点，千万**不要**为了图调用省事儿而将`os`模块解包导入，即不要使用`from os import *`来导入`os`模块；否则`os.open()`将会覆盖内置函数`open()`，从而造成预料之外的错误。
 
-## **2. 常用功能**
+## **常用功能**
 
 > 注意，`os`模块中大多数接受路径作为参数的函数也可以接受“文件描述符”作为参数。
 > 文件描述符：file descriptor，在 Python 文档中简记为 fd，是一个与某个打开的文件对象绑定的整数，可以理解为该文件在系统中的编号。
 
-### **2.1 os.name**
+### **os.name**
 
 该属性宽泛地指明了当前 Python 运行所在的环境，实际上是导入的操作系统相关模块的名称。这个名称也决定了模块中**哪些功能是可用**的，哪些是没有相应实现的。
 
@@ -46,7 +46,7 @@ tags: python
 
 > 查看`sys`模块中的`sys.platform`属性可以得到关于运行平台更详细的信息，在此不再赘述
 
-### **2.2 os.environ**
+### **os.environ**
 
 `os.environ`属性可以返回环境相关的信息，主要是各类环境变量。返回值是一个映射（类似字典类型），具体的值为第一次导入`os`模块时的快照；其中的各个键值对，键是环境变量名，值则是环境变量对应的值。在第一次导入`os`模块之后，除非直接修改`os.environ`的值，否则该属性的值不再发生变化。
 
@@ -64,7 +64,7 @@ Linux 下，其值为：
  '/home/caiguang'
 ```
 
-### **2.3 os.walk()**
+### **os.walk()**
 
 这个函数需要传入一个路径作为`top`参数，函数的作用是在以`top`为根节点的目录树中游走，对树中的每个目录生成一个由`(dirpath, dirnames, filenames)`三项组成的三元组。
 
@@ -90,7 +90,7 @@ Linux 下，其值为：
     │      
     └─dir3
 
-### **2.4 os.listdir()**
+### **os.listdir()**
 
 “listdir”即“list directories”，列出（当前）目录下的全部路径（及文件）。该函数存在一个参数，用以指定要列出子目录的路径，默认为`“.”`，即“当前路径”。
 
@@ -113,7 +113,7 @@ Linux 下，其值为：
 
 该函数的返回值就是当前目录下所有文件而非文件夹的名称列表。
 
-### **2.5 os.mkdir()**
+### **os.mkdir()**
 
 “mkdir”，即“make directory”，用处是“新建一个路径”。需要传入一个类路径参数用以指定新建路径的位置和名称，如果指定路径已存在，则会抛出`FileExistsError`异常。
 
@@ -138,13 +138,13 @@ Linux 下，其值为：
  >>> os.makedirs("test_os_mkdir/test_os_makedirs/hello")
 ```
 
-### **2.6 os.remove()**
+### **os.remove()**
 
 用于删除文件，如果指定路径是目录而非文件的话，就会抛出`IsADirectoryError`异常。删除目录应该使用`os.rmdir()`函数。
 
 同样的，对应于`os.makedirs()`，删除路径操作`os.rmdir()`也有一个递归删除的函数`os.removedirs()`，该函数会尝试从最下级目录开始，逐级删除指定的路径，几乎就是一个`os.makedirs()`的逆过程；一旦遇到非空目录即停止。
 
-### **2.7 os.rename()**
+### **os.rename()**
 
 该函数的作用是将文件或路径重命名，一般调用格式为`os.rename(src, dst)`，即将`src`指向的文件或路径重命名为`dst`指定的名称。
 
@@ -154,7 +154,7 @@ Linux 下，其值为：
 
 注意，这两种情况下，如果函数执行成功，都会调用`os.removedir()`函数来递归删除源路径的最下级目录。
 
-### **2.8 os.getcwd()**
+### **os.getcwd()**
 
 “getcwd”实际上是“get the current working directory”的简写，顾名思义，也就是说这个函数的作用是“获取当前工作路径”。在程序运行的过程中，无论物理上程序在实际存储空间的什么地方，“当前工作路径”即可认为是程序所在路径；与之相关的“相对路径”、“同目录下模块导入”等相关的操作均以“当前工作路径”为准。
 
@@ -174,7 +174,7 @@ Linux 下的输出则是：
 '/home/caiguang/hello'
 ```
 
-### **2.9 os.chdir()**
+### **os.chdir()**
 
 “chdir”其实是“change the directory”的简写，因此`os.chdir()`的用处实际上是切换当前工作路径为指定路径。其中“指定路径”需要作为参数传入函数`os.chdir()`，该参数既可以是文本或字节型字符串，也可以是一个文件描述符，还可以是一个广义的类路径（path-like）对象。若指定路径不存在，则会抛出`FileNotFoundError`异常。
 
@@ -210,7 +210,7 @@ Linux 下的输出则是：
 ['hello.txt']
 ```
 
-## **3. os.path 模块**
+## **os.path 模块**
 
 其实这个模块是`os`模块根据系统类型从另一个模块导入的，并非直接由`os`模块实现，比如`os.name`值为`nt`，则在`os`模块中执行`import ntpath as path`；如果`os.name`值为`posix`，则导入`posixpath`。
 
@@ -218,7 +218,7 @@ Linux 下的输出则是：
 
 更进一步地说，`os.path`模块的功能我们都可以自己使用字符串操作手动实现，该模块的作用是让我们在实现相同功能的时候不必考虑具体的系统，尤其是不需要过多关注文件系统分隔符的问题。
 
-### **3.1 os.path.join()**
+### **os.path.join()**
 
 这是一个十分实用的函数，可以将多个传入路径组合为一个路径。实际上是将传入的几个字符串用系统的分隔符连接起来，组合成一个新的字符串，所以一般的用法是将第一个参数作为父目录，之后每一个参数即使下一级目录，从而组合成一个新的符合逻辑的路径。
 
@@ -235,7 +235,7 @@ Linux 下的输出则是：
 'g:/hello'
 ```
 
-### **3.2 os.path.abspath()**
+### **os.path.abspath()**
 
 将传入路径规范化，返回一个相应的绝对路径格式的字符串。
 
@@ -254,7 +254,7 @@ Linux 下的输出则是：
 'D:\\caiguang\\hello'
 ```
 
-### **3.3 os.path.basename()**
+### **os.path.basename()**
 
 该函数返回传入路径的“基名”，即传入路径的最下级目录。
 
@@ -271,7 +271,7 @@ Linux 下的输出则是：
 ''
 ```
 
-### **3.4 os.path.dirname()**
+### **os.path.dirname()**
 
 与上一个函数正好相反，返回的是最后一个分隔符前的整个字符串：
 
@@ -283,7 +283,7 @@ Linux 下的输出则是：
 '/hello/world/python/IAmBasename'
 ```
 
-### **3.5 os.path.split()**
+### **os.path.split()**
 
 哈哈实际上前两个函数都是弟弟，这个函数才是老大。
 
@@ -302,7 +302,7 @@ def dirname(p):
 
 通过`os.path.join()`函数又可以把它们组合起来得到原先的路径。
 
-### **3.6 os.path.exists()**
+### **os.path.exists()**
 
 这个函数用于判断路径所指向的位置是否存在。若存在则返回`True`，不存在则返回`False`：
 
@@ -317,7 +317,7 @@ False
 
 一般的用法是在需要持久化保存某些数据的场景，为避免重复创建某个文件，需要在写入前用该函数检测一下相应文件是否存在，若不存在则新建，若存在则在文件内容之后增加新的内容。
 
-### **3.7 os.path.isabs()**
+### **os.path.isabs()**
 
 该函数判断传入路径是否是绝对路径，若是则返回`True`，否则返回`False`。当然，仅仅是检测格式，同样不对其有效性进行任何核验：
 
@@ -327,7 +327,7 @@ False
  
 ```
 
-### **3.8 os.path.isfile() 和 os.path.isdir()**
+### **os.path.isfile() 和 os.path.isdir()**
 
 这两个函数分别判断传入路径是否是文件或路径，注意，此处会核验路径的有效性，如果是无效路径将会持续返回`False`。
 
@@ -349,7 +349,7 @@ False
  
 ```
 
-## **4. 总结**
+## **总结**
 
 本文详细介绍了与操作系统交互的`os`模块中一些常用的属性和函数，基本可以覆盖初阶的学习和使用。有了这些功能，我们已经可以写出一些比较实用的脚本了。
 
